[gd_scene load_steps=8 format=3 uid="uid://mlem4f31wu2r"]

[ext_resource type="Script" uid="uid://csjqao1r72dfh" path="res://scripts/start_ui.gd" id="1_31gsc"]
[ext_resource type="Texture2D" uid="uid://cv1njptgorlup" path="res://Jungle Asset Pack/mockup.png" id="1_yubl7"]
[ext_resource type="FontFile" uid="uid://ccypdtyjgd5vm" path="res://Jungle Asset Pack/Pixeled.ttf" id="3_31gsc"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6msbp"]
texture = ExtResource("1_yubl7")
modulate_color = Color(0.288518, 0.288518, 0.288518, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o1bwx"]
bg_color = Color(0.986752, 0.986752, 0.986752, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uo54s"]
bg_color = Color(0.969137, 0.969137, 0.969137, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="GDScript" id="GDScript_6msbp"]
script/source = "extends Button

func _pressed():
	get_tree().change_scene_to_file(\"res://scenes/Level/Lv1.tscn\")
"

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_31gsc")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_6msbp")

[node name="btnPlay" type="Button" parent="."]
layout_mode = 0
offset_left = 472.0
offset_top = 321.0
offset_right = 714.0
offset_bottom = 455.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_o1bwx")
text = "Play"

[node name="btnExit" type="Button" parent="."]
layout_mode = 0
offset_left = 474.0
offset_top = 492.0
offset_right = 716.0
offset_bottom = 626.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_uo54s")
text = "EXIT"
script = SubResource("GDScript_6msbp")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 314.0
offset_top = 120.0
offset_right = 902.0
offset_bottom = 288.0
theme_override_colors/font_color = Color(0.901961, 0.0823529, 0, 1)
theme_override_fonts/font = ExtResource("3_31gsc")
theme_override_font_sizes/font_size = 60
text = "TROLL GAME"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="btnPlay" to="." method="_on_btn_play_pressed"]
[connection signal="pressed" from="btnExit" to="." method="_on_btn_exit_pressed"]
